# meta-hack

email-triage-env/: Dockerfile  HF_README.md  Makefile  README.md  app.py  baseline.py  demo_agent.py  openenv.yaml  openenv_client.py  pyproject.toml  requirements.txt  ui.html  validate.py
email-triage-env/.github/workflows/: ci.yml
email-triage-env/data/: emails.py
email-triage-env/env/: __init__.py  environment.py  graders.py  models.py  session.py  tasks.py
email-triage-env/tests/: test_environment.py
